@@ -581,6 +581,14 @@ init|=
 literal|60000
 decl_stmt|;
 comment|// default value of 1 minute
+specifier|public
+specifier|static
+specifier|final
+name|long
+name|DEFAULT_SLEEP_BEFORE_RERUN
+init|=
+literal|10000
+decl_stmt|;
 specifier|private
 specifier|static
 specifier|final
@@ -4521,11 +4529,14 @@ block|}
 comment|/**    * Fix inconsistencies found by fsck. This should try to fix errors (if any)    * found by fsck utility.    */
 name|void
 name|setFixErrors
-parameter_list|()
+parameter_list|(
+name|boolean
+name|shouldFix
+parameter_list|)
 block|{
 name|fix
 operator|=
-literal|true
+name|shouldFix
 expr_stmt|;
 block|}
 name|boolean
@@ -4613,6 +4624,17 @@ name|err
 operator|.
 name|println
 argument_list|(
+literal|"   -sleepBeforeRerun {timeInSeconds} Sleep this many seconds"
+operator|+
+literal|" before checking if the fix worked if run with -fix"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
 literal|"   -summary Print only summary of the tables and status."
 argument_list|)
 expr_stmt|;
@@ -4672,6 +4694,11 @@ name|HBaseFsck
 argument_list|(
 name|conf
 argument_list|)
+decl_stmt|;
+name|long
+name|sleepBeforeRerun
+init|=
+name|DEFAULT_SLEEP_BEFORE_RERUN
 decl_stmt|;
 comment|// Process command-line args.
 for|for
@@ -4805,6 +4832,81 @@ name|cmd
 operator|.
 name|equals
 argument_list|(
+literal|"-sleepBeforeRerun"
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|i
+operator|==
+name|args
+operator|.
+name|length
+operator|-
+literal|1
+condition|)
+block|{
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"HBaseFsck: -sleepBeforeRerun needs a value."
+argument_list|)
+expr_stmt|;
+name|printUsageAndExit
+argument_list|()
+expr_stmt|;
+block|}
+try|try
+block|{
+name|sleepBeforeRerun
+operator|=
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|args
+index|[
+name|i
+operator|+
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NumberFormatException
+name|e
+parameter_list|)
+block|{
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"-sleepBeforeRerun needs a numeric value."
+argument_list|)
+expr_stmt|;
+name|printUsageAndExit
+argument_list|()
+expr_stmt|;
+block|}
+name|i
+operator|++
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|cmd
+operator|.
+name|equals
+argument_list|(
 literal|"-fix"
 argument_list|)
 condition|)
@@ -4812,7 +4914,9 @@ block|{
 name|fsck
 operator|.
 name|setFixErrors
-argument_list|()
+argument_list|(
+literal|true
+argument_list|)
 expr_stmt|;
 block|}
 elseif|else
@@ -4883,6 +4987,52 @@ name|shouldRerun
 argument_list|()
 condition|)
 block|{
+try|try
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Sleeping "
+operator|+
+name|sleepBeforeRerun
+operator|+
+literal|"ms before re-checking after fix..."
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|sleepBeforeRerun
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+name|Runtime
+operator|.
+name|getRuntime
+argument_list|()
+operator|.
+name|exit
+argument_list|(
+name|code
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Just report
+name|fsck
+operator|.
+name|setFixErrors
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
 name|code
 operator|=
 name|fsck
