@@ -311,12 +311,13 @@ literal|3
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
-specifier|public
-name|void
-name|testHBaseFsck
-parameter_list|()
+specifier|private
+name|int
+name|doFsck
+parameter_list|(
+name|boolean
+name|fix
+parameter_list|)
 throws|throws
 name|Exception
 block|{
@@ -341,14 +342,37 @@ argument_list|(
 literal|0
 argument_list|)
 expr_stmt|;
+name|fsck
+operator|.
+name|setFixErrors
+argument_list|(
+name|fix
+argument_list|)
+expr_stmt|;
 comment|// Most basic check ever, 0 tables
-name|int
-name|result
-init|=
+return|return
 name|fsck
 operator|.
 name|doWork
 argument_list|()
+return|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testHBaseFsck
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|int
+name|result
+init|=
+name|doFsck
+argument_list|(
+literal|false
+argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
@@ -369,10 +393,10 @@ expr_stmt|;
 comment|// We created 1 table, should be fine
 name|result
 operator|=
-name|fsck
-operator|.
-name|doWork
-argument_list|()
+name|doFsck
+argument_list|(
+literal|false
+argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
@@ -551,20 +575,14 @@ break|;
 block|}
 block|}
 block|}
-comment|// We set this here, but it's really not fixing anything...
-name|fsck
-operator|.
-name|setFixErrors
-argument_list|()
-expr_stmt|;
+comment|// Try to fix the data
 name|result
 operator|=
-name|fsck
-operator|.
-name|doWork
-argument_list|()
+name|doFsck
+argument_list|(
+literal|true
+argument_list|)
 expr_stmt|;
-comment|// Fixed or not, it still reports inconsistencies
 name|assertEquals
 argument_list|(
 operator|-
@@ -580,8 +598,36 @@ argument_list|(
 literal|15000
 argument_list|)
 expr_stmt|;
-comment|// Disabled, won't work because the region stays unassigned, see HBASE-3217
-comment|// new HTable(conf, TABLE).getScanner(new Scan());
+name|result
+operator|=
+name|doFsck
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// Should have fixed
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|result
+argument_list|)
+expr_stmt|;
+operator|new
+name|HTable
+argument_list|(
+name|conf
+argument_list|,
+name|TABLE
+argument_list|)
+operator|.
+name|getScanner
+argument_list|(
+operator|new
+name|Scan
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
